--- a/src/vois/templates/PageConfiguratorTest.ipynb
+++ b/src/vois/templates/PageConfiguratorTest.ipynb
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f775bf7fd1746d986357c8c34c15825",
+       "model_id": "a8be41a23d404de28b5d3166b7f292d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c625facb87d54689a8339e4bfbeb6eca",
+       "model_id": "96908e083efb474a8b04aed1bf8ca540",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,33 +35,11 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'vois.templates'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "File \u001b[0;32m~/vois/src/vois/templates/PageConfigurator.py:29\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mvois\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m colors, download\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mvois\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvuetify\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m settings, toggle, ColorPicker, sliderFloat, UploadImage, UploadJson, Button, switch, tooltip, iconButton, dialogGeneric, selectSingle\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mvois\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtemplates\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m template1panel, template2panels, template3panels\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# Change style of a label\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlabelchange\u001b[39m(lab, size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m14\u001b[39m, weight\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m400\u001b[39m, color\u001b[38;5;241m=\u001b[39msettings\u001b[38;5;241m.\u001b[39mcolor_first, width\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'vois.templates'"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'PageConfigurator' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 24\u001b[0m\n\u001b[1;32m     20\u001b[0m cssUtils\u001b[38;5;241m.\u001b[39mswitchFontSize(output,\u001b[38;5;241m14\u001b[39m)\n\u001b[1;32m     22\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPageConfigurator.py\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 24\u001b[0m c \u001b[38;5;241m=\u001b[39m \u001b[43mPageConfigurator\u001b[49m(output)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'PageConfigurator' is not defined"
-     ]
     }
    ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
-    "#%run ../development/load_local_vois.py -w\n",
+    "%run ../development/load_local_vois.py -w\n",
     "\n",
     "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
