--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -118,10 +118,10 @@
     "p.create()\n",
     "\n",
     "# Read the state of the page from .json file\n",
-    "with open('aaa.json') as f:\n",
-    "    p.state = json.load(f)\n",
+    "#with open('aaa.json') as f:\n",
+    "#    p.state = json.load(f)\n",
     "    \n",
-    "aaa = '''# Set the state of the page\n",
+    "# Set the state of the page\n",
     "p.state = {\n",
     "     'appname': 'FAIRMODE',\n",
     "     'title': 'Concentration models',\n",
@@ -147,7 +147,7 @@
     "     'creditswidth': 180,\n",
     "     'transition': 'dialog-transition'\n",
     "}\n",
-    "'''\n",
+    "\n",
     "\n",
     "# Open the page\n",
     "p.open()"
