Started Content module to be used inside templates

--- a/src/vois/templates/PageConfigurator.ipynb
+++ b/src/vois/templates/PageConfigurator.ipynb
@@ -2,12 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b822bbc8",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8657fc54aa19485992eceb3bff49ccd3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', min_height='0px', min_width='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "134e320a76d54d4b8f3324f8cd68982b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
@@ -35,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe2635be-63fa-4808-9349-abf1853f7d90",
+   "id": "43be4fd7-d9d8-44bf-89aa-8d5c8c6a9bf9",
    "metadata": {},
    "outputs": [],
    "source": []
