Added Map widget in geo package

--- a/src/vois/templates/ContentTest.ipynb
+++ b/src/vois/templates/ContentTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
@@ -11,15 +11,15 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4e936a8ab394242bba329780a2c9b11",
+       "model_id": "d41a9ada34114c2a94ece074db5c6b81",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Content(children=[Card(children=[Card(height='50vh', layout=None, max_height='50vh', max_width='50vw', min_hei…"
+       "Content(children=[Card(children=[HBox(children=(VBox(children=(Card(height='calc(50vh * 0.500000)', layout=Non…"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
     "\n",
     "%run Content.py\n",
     "\n",
-    "c = Content(splitmode=0)\n",
+    "c = Content(splitmode=4)\n",
     "c"
    ]
   },
@@ -58,8 +58,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "7db6490e-9483-4d0c-8f33-281b165e363d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.leftwidthperc = 80"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2e1b4a64-f782-4861-b346-51359c5d9499",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c.topheightperc = 80"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbd4dff8-a265-4c74-99c5-cb09be30da14",
    "metadata": {},
    "outputs": [],
    "source": []
