Added properties to Map class

--- a/src/vois/geo/MapTest.ipynb
+++ b/src/vois/geo/MapTest.ipynb
@@ -19,10 +19,30 @@
     "settings.color_second   = '#a0dcd0'\n",
     "settings.button_rounded = True\n",
     "\n",
+    "from IPython.display import display\n",
+    "\n",
+    "output = widgets.Output(layout=Layout(width='0px', height='0px'))\n",
+    "display(output)\n",
+    "\n",
+    "from vois import cssUtils\n",
+    "cssUtils.switchFontSize(output,14)\n",
+    "\n",
     "# Create the page\n",
     "%run Map.py\n",
     "m = Map(show_overview=False, show_coordinates=False)\n",
     "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fec931b8-cfec-4c72-afd0-cbea63251dd4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "m.configure()"
    ]
   },
   {
@@ -44,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.show_overview = True"
+    "m.show_fullscreen = True"
    ]
   },
   {
@@ -56,7 +76,9 @@
    },
    "outputs": [],
    "source": [
-    "m.basemaps_dark = True"
+    "m.color_first = 'red'\n",
+    "m.color_second = 'yellow'\n",
+    "m.dark = False"
    ]
   },
   {
