--- a/src/vois/templates/ContentTest.ipynb
+++ b/src/vois/templates/ContentTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
@@ -11,7 +11,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d41a9ada34114c2a94ece074db5c6b81",
+       "model_id": "0df5d120f1784b8fa6773bc61658a4c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "21ee083974804081b3f7e2f60e6638a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -19,7 +33,7 @@
        "Content(children=[Card(children=[HBox(children=(VBox(children=(Card(height='calc(50vh * 0.500000)', layout=Non…"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,6 +41,15 @@
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
+    "\n",
+    "from ipywidgets import widgets, HTML, Layout\n",
+    "from IPython.display import display\n",
+    "\n",
+    "output = widgets.Output(layout=Layout(width='0px', height='0px'))\n",
+    "display(output)\n",
+    "\n",
+    "from vois import cssUtils\n",
+    "cssUtils.switchFontSize(output,14)\n",
     "\n",
     "%run Content.py\n",
     "\n",
