Added color properties to many widgets

--- a/src/vois/geo/MapTest.ipynb
+++ b/src/vois/geo/MapTest.ipynb
@@ -2,12 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "96d54e79",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "60cf4cd234954d64a0dc7bae3ad4e24f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09f27e7603e74ec593300962a8a2a4f0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[50, 12], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_tex…"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
@@ -30,7 +60,7 @@
     "# Create the page\n",
     "%run Map.py\n",
     "m = Map(show_overview=False, show_coordinates=False)\n",
-    "m"
+    "m.draw()"
    ]
   },
   {
