--- a/src/vois/svgMapTest.ipynb
+++ b/src/vois/svgMapTest.ipynb
@@ -2,11 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c1236b41",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6cf299f1126c4e09b3ff3d1bb6d1562a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<svg\\n   xmlns:svg=\"http://www.w3.org/2000/svg\"\\n   xmlns=\"http://www.w3.org/2000/svg\"\\n   width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "%run ../vois/development/load_local_vois.py -w\n",
+    "\n",
     "%run svgMap.py\n",
     "import random\n",
     "from ipywidgets import HTML\n",
@@ -19,20 +38,19 @@
     "i = 0\n",
     "for c in country_codes:\n",
     "    value = random.randint(0,100)\n",
-    "    if value > 1:\n",
-    "        if c == 'IT': value = 90.0\n",
-    "        record = {'iso2code': c, 'value': value, 'label': '%d' % value }\n",
-    "        df.at[i, :] = record\n",
-    "        i += 1\n",
+    "    if c == 'IT': value = 90.0\n",
+    "    record = {'iso2code': c, 'value': value, 'label': '%d' % value }\n",
+    "    df.loc[len(df)] = record\n",
+    "    i += 1\n",
     "\n",
     "#df = df.set_index('iso2code')\n",
     "            \n",
     "#df\n",
-    "colorlist = ['#440154', '#482878', '#3e4989', '#31688e', '#26828e', '#1f9e89', '#35b779', '#6ece58', '#b5de2b', '#fde725'] # Viridis\n",
-    "#colorlist = ['#0d0887', '#46039f', '#7201a8', '#9c179e', '#bd3786', '#d8576b', '#ed7953', '#fb9f3a', '#fdca26', '#f0f921'] # Plasma\n",
+    "#colorlist = ['#440154', '#482878', '#3e4989', '#31688e', '#26828e', '#1f9e89', '#35b779', '#6ece58', '#b5de2b', '#fde725'] # Viridis\n",
+    "colorlist = ['#0d0887', '#46039f', '#7201a8', '#9c179e', '#bd3786', '#d8576b', '#ed7953', '#fb9f3a', '#fdca26', '#f0f921'] # Plasma\n",
     "#colorlist = [rgb(36, 86, 104), rgb(15, 114, 121), rgb(13, 143, 129), rgb(57, 171, 126), rgb(110, 197, 116), rgb(169, 220, 103), rgb(237, 239, 93)]\n",
     "display(HTML(svgMapEurope(df, code_column='iso2code', codes_selected=['IT','SE','PL'], stroke_selected='red', colorlist=colorlist, stdevnumber=1.5, onhoverfill='#f8bd1a', \n",
-    "                          width=800, stroke_width=3.0, hoveronempty=False, legendtitle='Legent title', legendunits='KTOE per 100K inhabit.')))"
+    "                          width='40vw', height='60vh', stroke_width=3.0, hoveronempty=False, legendtitle='Legent title', legendunits='KTOE per 100K inhabit.')))"
    ]
   },
   {
@@ -60,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
