--- a/src/vois/vuetify/Tests/palettePickerExTest.ipynb
+++ b/src/vois/vuetify/Tests/palettePickerExTest.ipynb
@@ -4,10 +4,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3e34f125",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run palettePickerEx.py\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
+    "%run ../palettePickerEx.py\n",
     "\n",
     "from ipywidgets import widgets\n",
     "\n",
@@ -25,6 +29,18 @@
     "\n",
     "p = palettePickerEx(width=250, value='Turbo', interpolate=False, show_interpolate_switch=False, clearable=False, onchange=onchange, onchangeOpacity=onchangeOpacity)\n",
     "p.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8b335e6-2eb5-453d-a0e7-0227f0d291cf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "p.color = 'red'"
    ]
   },
   {
@@ -93,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
