--- a/src/vois/vuetify/Tests/palettePickerTest.ipynb
+++ b/src/vois/vuetify/Tests/palettePickerTest.ipynb
@@ -4,11 +4,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "39fa854c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
     "# Simple palette picker\n",
-    "%run palettePicker.py\n",
+    "%run ../palettePicker.py\n",
     "\n",
     "import ipyvuetify as v\n",
     "from ipywidgets import widgets\n",
@@ -24,6 +28,18 @@
     "\n",
     "display(p.draw())\n",
     "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d35f3b96-3bf4-408f-ae08-08ec8bf88b7a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "p.color = 'red'"
    ]
   },
   {
@@ -171,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
