--- a/src/vois/vuetify/Tests/selectSingleTest.ipynb
+++ b/src/vois/vuetify/Tests/selectSingleTest.ipynb
@@ -2,12 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "203b68c3",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0f6c8ec432fc420a85a4dbba6d8a754e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b3fb096af724cbf826537164ee55783",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[Select(background_color='#f8bd1a', chips=False, class_='pa-0 mx-0 my-1 mb-n4', clearable=True, …"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../../development/load_local_vois.py -w\n",
@@ -51,6 +81,18 @@
     "# Example with mapping: displays country names an the value property returns a country code or None\n",
     "sel = selectSingle('Country:', names, selection='BE', width=200, mapping=mapping, reverse_mapping=reverse_mapping, onchange=onchange, marginy=1, colorbackground=True)\n",
     "sel.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f3cd8059-83de-4281-97b8-aa3f2e0d7eb7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "sel.color = 'red'"
    ]
   },
   {
