--- a/src/vois/vuetify/Tests/sliderFloatTest.ipynb
+++ b/src/vois/vuetify/Tests/sliderFloatTest.ipynb
@@ -42,7 +42,9 @@
    "id": "b0f6a9d4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s.color = 'red'"
+   ]
   },
   {
    "cell_type": "code",
