--- a/src/vois/vuetify/Tests/switchTest.ipynb
+++ b/src/vois/vuetify/Tests/switchTest.ipynb
@@ -2,41 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dc373131",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59c6a05652404ddeb1158675446c075f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[Switch(class_='pa-0 ma-0 ml-3 mt-2 mb-n3', color='#f8bd1a', dense=True, disabled=False, flat=Tr…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b3245ea3bea4ac1a7903419a9f2aae8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(width='400px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../../development/load_local_vois.py -w\n",
@@ -60,27 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "044f01f8-f92c-4da4-a5fa-50ecbee377eb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "s.color = 'red'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d522105d-5f0f-4caa-a308-49e5c7d30e21",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5f60517a6584823a131c371e2776475",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HTML(value='\\n<style>.vuetify-styles .v-label {\\n    font-size: 12px;\\n}\\n</style>')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cssUtils.switchFontSize(size=12)"
    ]
@@ -97,27 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bc81fc65",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed7cd672974946f2a51210c973dbde40",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HTML(value='\\n<style>.vuetify-styles .v-label {\\n    font-size: 14px;\\n}\\n</style>')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import HTML\n",
     "from IPython.display import display\n",
@@ -133,27 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c618eae1-4506-497a-b0c2-d6ef6a3c564d",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be02e522461f455eb746ea92d87bf09c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HTML(value='\\n<style>.vuetify-styles .v-label {\\n    font-size: 14px;\\n}\\n</style>')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import HTML\n",
     "from IPython.display import display\n",
