Added properties color_selected and color_unselected to Button

--- a/src/vois/templates/ContentTest.ipynb
+++ b/src/vois/templates/ContentTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a9121fffd1541fca9ec320cf7d2dd45",
+       "model_id": "ac71e9d668cf49e4bfe29eb93262d7ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae4d3165460e45ab897e524a361be19d",
+       "model_id": "5742a9398ea649e1982126f9e947543a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -33,7 +33,7 @@
        "Content(children=[Card(children=[Card(children=[Map(center=[50, 12], controls=(ZoomControl(options=['position'…"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,13 +53,13 @@
     "\n",
     "%run Content.py\n",
     "\n",
-    "c = Content(splitmode=0)\n",
+    "c = Content(output=output, splitmode=0)\n",
     "c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "c6bd354c-a92f-405a-8b17-0f19208daf26",
    "metadata": {
     "tags": []
@@ -68,7 +68,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1bdd61eec094205a01d6a74ffa77868",
+       "model_id": "35d2f1c0ba4d4e1c8f51bca2449fbb74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,13 +76,25 @@
        "Card(children=[VBox(children=(Html(children=[Switch(class_='pa-0 ma-0 ml-3 mt-2 mb-n3', color='#f8bd1a', dense…"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "c.card1children.configure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "efe26fd8-d97e-4abb-89c6-a8de740e7206",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c.color_first = 'red'"
    ]
   },
   {
