--- a/src/vois/vuetify/Tests/buttonTest.ipynb
+++ b/src/vois/vuetify/Tests/buttonTest.ipynb
@@ -2,12 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cb7d67c9",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "75394c451fb1483aba92c67174d99881",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(children=[Container(children=[Tooltip(bottom=True, children=['Tooltip for button'], color='#999999', la…"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../../development/load_local_vois.py -w\n",
@@ -22,6 +38,18 @@
     "\n",
     "b = Button('Sample button with icon and tooltip', width=360, height=42, tooltip='Tooltip for button', selected=True, icon='mdi-cogs')\n",
     "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1113e390-95de-43fa-8664-1d0cf9dce846",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "b.color_selected = 'red'"
    ]
   },
   {
