Content class almost finalized

--- a/src/vois/templates/ContentTest.ipynb
+++ b/src/vois/templates/ContentTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac71e9d668cf49e4bfe29eb93262d7ac",
+       "model_id": "049d1a0b47a444679f93c2b3d7b871b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5742a9398ea649e1982126f9e947543a",
+       "model_id": "df9a7195bf5947318ef048b4d56b78e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -33,9 +33,22 @@
        "Content(children=[Card(children=[Card(children=[Map(center=[50, 12], controls=(ZoomControl(options=['position'…"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "836cdce68622467c88d5cc33999b84eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[VBox(children=(Html(layout=None, style_='width:  0px; height: 10px;', tag='div'), HBox(children…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -54,52 +67,40 @@
     "%run Content.py\n",
     "\n",
     "c = Content(output=output, splitmode=0)\n",
-    "c"
+    "#display(c.debug)\n",
+    "display(c)\n",
+    "display(c.configure())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "c6bd354c-a92f-405a-8b17-0f19208daf26",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35d2f1c0ba4d4e1c8f51bca2449fbb74",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[VBox(children=(Html(children=[Switch(class_='pa-0 ma-0 ml-3 mt-2 mb-n3', color='#f8bd1a', dense…"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.card1children.configure()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 77,
    "id": "efe26fd8-d97e-4abb-89c6-a8de740e7206",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "c.color_first = 'red'"
+    "c.color_first  = 'red'\n",
+    "c.color_second = '#ffaa99'\n",
+    "c.dark = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "c6bd354c-a92f-405a-8b17-0f19208daf26",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "isinstance(c.card1children, Map.Map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6af9e5fa-6a40-441f-bf6f-5eaa567d75ed",
    "metadata": {
     "tags": []
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7b4a9a50-5645-4db6-8533-7a1fcdd21f7a",
    "metadata": {
     "tags": []
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6324887a-9a07-421a-983a-072bddd6980c",
    "metadata": {
     "tags": []
@@ -138,86 +139,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c7daea0e-0d23-458a-807f-096f85e8437a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'calc(calc(50vw * 0.500000) - 1px)'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s.width"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "740f50d1-1427-49ee-9125-991882c6d0c7",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f11b90d3eacc42c39951af15980ab9fe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[VBox(children=(Row(children=[Html(children=['Chart width in pixels:'], class_='pa-0 ma-0 mt-4',…"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pc.configure()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "76e4a265-325f-490d-acc5-3d3567c9a5bb",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e19e60ad6df498bae5d760d7a03a21b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[VBox(children=(Html(children=[Select(background_color='white', chips=False, class_='pa-0 mx-0 m…"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s.configure()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "389923c7-c759-4c4d-9815-d83dbcc1256f",
    "metadata": {
     "tags": []
@@ -230,20 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "87f9eadf-8de6-46c5-87c4-7d3eda11e79d",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "c.leftwidthperc = 20\n",
+    "c.leftwidthperc = 60\n",
     "c.topheightperc = 80"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "7a22470c-a58e-4db5-8978-1ebf08f7f03b",
    "metadata": {
     "tags": []
@@ -314,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7db6490e-9483-4d0c-8f33-281b165e363d",
    "metadata": {},
    "outputs": [],
@@ -324,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2e1b4a64-f782-4861-b346-51359c5d9499",
    "metadata": {
     "tags": []
@@ -336,33 +294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "dbd4dff8-a265-4c74-99c5-cb09be30da14",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "702bc662b08c4734a677f411e31e711a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[HTML(value='\\n<svg\\n   xmlns:svg=\"http://www.w3.org/2000/svg\"\\n   xmlns=\"http://www.w3.org/2000…"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c.card3children.draw()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f9bfb48e-ff83-4c83-bd6d-3602e3c11770",
    "metadata": {},
    "outputs": [],
