--- a/src/vois/vuetify/Tests/toggleTest.ipynb
+++ b/src/vois/vuetify/Tests/toggleTest.ipynb
@@ -2,12 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d7b41f34",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86a9f8ab7d664ed3aff46b98e0e1ce74",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Col(children=[Button(children=[Container(children=[Tooltip(bottom=True, children=['Tooltip for label1'], color…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "620d438f42b3494aa19d731337bc0b23",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../../development/load_local_vois.py -w\n",
@@ -26,6 +55,18 @@
     "\n",
     "display(t.draw())\n",
     "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ff6f3339-1dd7-4f02-b2b8-f40f3e7a201e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "t.buttons[1].disabled = False"
    ]
   },
   {
