Added state property to Map

--- a/src/vois/geo/MapTest.ipynb
+++ b/src/vois/geo/MapTest.ipynb
@@ -2,42 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "96d54e79",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60cf4cd234954d64a0dc7bae3ad4e24f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09f27e7603e74ec593300962a8a2a4f0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[50, 12], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_tex…"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
@@ -59,8 +29,45 @@
     "\n",
     "# Create the page\n",
     "%run Map.py\n",
-    "m = Map(show_overview=False, show_coordinates=False)\n",
+    "m = Map(show_overview=False, show_coordinates=False, basemapindex=1)\n",
     "m.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9d25519-e295-4f60-865d-63f918aa3b8d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "m.state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c5d9c4e-fb86-4296-bd71-b5a25d5aa2ef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "m.state = {'width': '100%',\n",
+    " 'height': '600px',\n",
+    " 'show_fullscreen': True,\n",
+    " 'show_coordinates': False,\n",
+    " 'show_search': False,\n",
+    " 'show_scale': False,\n",
+    " 'show_basemaps': True,\n",
+    " 'show_overview': True,\n",
+    " 'color_first': '#0d856d',\n",
+    " 'color_second': '#a0dcd0',\n",
+    " 'dark': True,\n",
+    " 'basemapindex': 0,\n",
+    " 'center': [47.58393661978137, 9.522056579589846],\n",
+    " 'zoom': 11.0}"
    ]
   },
   {
@@ -115,6 +122,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9890ba21-b78a-4ffc-9f02-3980790b4606",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.basemapindex = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5a72262-1b7f-4d1f-ad2a-501c57771751",
    "metadata": {},
    "outputs": [],
    "source": []
