--- a/src/vois/templates/ImageTest.ipynb
+++ b/src/vois/templates/ImageTest.ipynb
@@ -33,7 +33,8 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "s.imageurl = 'https://picsum.photos/id/%d/1200/800'%random.randint(1,1000)"
+    "s.imageurl = 'https://picsum.photos/id/%d/1200/800'%random.randint(1,1000)\n",
+    "#s.imageurl = 'https://ui-patterns.com/uploads/image/file/1830/best_792.jpg'"
    ]
   },
   {
@@ -70,6 +71,18 @@
    "outputs": [],
    "source": [
     "s.configure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0f460c1-a067-46d4-a8ef-3fac93968e4f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "s.imageurl"
    ]
   },
   {
