Added state property to SVGdrawing

--- a/src/vois/templates/SVGdrawingTest.ipynb
+++ b/src/vois/templates/SVGdrawingTest.ipynb
@@ -20,6 +20,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4f79a011-00a3-41b2-a6fe-32a0154c011c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "s.state = {'width': '80vw',\n",
+    " 'height': '40vh',\n",
+    " 'color_first': '#ff0000',\n",
+    " 'color_second': '#efefef',\n",
+    " 'dark': True,\n",
+    " 'familyname': 'sequential',\n",
+    " 'palette': 'Viridis'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "740f50d1-1427-49ee-9125-991882c6d0c7",
    "metadata": {
     "tags": []
