Added state property to PlotlyChart

--- a/src/vois/templates/PlotlyChartTest.ipynb
+++ b/src/vois/templates/PlotlyChartTest.ipynb
@@ -2,28 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f71ddece0fd84a7f91b957101674ca53",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "PlotlyChart(children=[Card(children=[Output(layout=Layout(height='300px', width='500px'))], flat=True, height=…"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run PlotlyChart.py\n",
     "\n",
@@ -33,35 +17,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "740f50d1-1427-49ee-9125-991882c6d0c7",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cead2e0c2004e409bb462cc88ed6270",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[VBox(children=(Row(children=[Html(children=['Chart width in pixels:'], class_='pa-0 ma-0 mt-4',…"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pc.configure()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "54fbdfc1-a601-4134-b789-3e2e0e60a09d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pc.state = {'chart_width': 852,\n",
+    " 'chart_height': 379,\n",
+    " 'color_first': 'red',\n",
+    " 'color_second': '#efefef',\n",
+    " 'dark': False}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f9bfb48e-ff83-4c83-bd6d-3602e3c11770",
    "metadata": {},
    "outputs": [],
@@ -72,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "404af5fe-1fcd-4b25-a978-bbf6b1f845af",
    "metadata": {},
    "outputs": [],
@@ -84,6 +68,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "64dcfc84-f139-4709-b093-d63cca3eafca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pc.color_first = 'red'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1e4387b-5952-4063-bce2-3d1f9bdbe4a2",
    "metadata": {},
    "outputs": [],
    "source": []
