Added state property to Image

--- a/src/vois/templates/ImageTest.ipynb
+++ b/src/vois/templates/ImageTest.ipynb
@@ -76,6 +76,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "55e696fb-68f1-4568-8eb5-a2ddfaf6eb65",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "s.state = {'width': '80vw',\n",
+    " 'height': '40vh',\n",
+    " 'imageurl': 'https://ui-patterns.com/uploads/image/file/1830/best_792.jpg',\n",
+    " 'color_first': 'red',\n",
+    " 'color_second': '#efefef',\n",
+    " 'dark': False}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a0f460c1-a067-46d4-a8ef-3fac93968e4f",
    "metadata": {
     "tags": []
